Update header for enterprise page.

--- a/app/views/enterprise/show.html.erb
+++ b/app/views/enterprise/show.html.erb
@@ -1,15 +1,14 @@
 
-<div class="container" style=";" >
+<div class="container" >
 
-  <div style='margin: 20px 0 40px 0; height: 215px;' >
-    <div class='pull-left' >
-      <%= link_to image_tag('versioneye-round-logo.png'), root_path %>
-    </div>
-    <div class="pull-left enterprise_header">Enterprise</div>
-    <div class="pull-left enterprise_subheader">
-      On your own server! Integrated with your private repositories and your continuous integration system!
-    </div>
-  </div>
+  <table>
+    <tr>
+      <td><%= link_to image_tag('versioneye-round-logo.png'), root_path %></td>
+      <td style="padding-left: 5px; font-size: 20px;">
+        On your own server!<br/>Integrated with your private repositories and your continuous integration system!
+      </td>
+    </tr>
+  </table>
 
 </div>
 
