Adjust logo on enterprise page.

--- a/app/views/enterprise/show.html.erb
+++ b/app/views/enterprise/show.html.erb
@@ -1,9 +1,9 @@
 
 <div class="container" >
 
-  <table>
+  <table style="margin-top: 15px; margin-bottom: 15px;">
     <tr>
-      <td><%= link_to image_tag('versioneye-round-logo.png'), root_path %></td>
+      <td><%= link_to image_tag('versioneye-round-logo.png', :style => "width: 140px;"), root_path %></td>
       <td style="padding-left: 5px; font-size: 20px;">
         On your own server!<br/>Integrated with your private repositories and your continuous integration system!
       </td>
