--- a/app/views/enterprise/show.html.erb
+++ b/app/views/enterprise/show.html.erb
@@ -27,12 +27,14 @@
         <h2 >Which binary repositories are supported?</h2>
         <div class="well-white" >
           <p class="lead">
-            The whole point of VersionEye Enterprise is that it can crawl internal repositories,
+            The whole point of running VersionEye as on-premise installation
+            is that it can crawl internal binary repositories,
             such as <a href="http://www.sonatype.com/nexus">Nexus Pro</a>,
             <a href="http://www.jfrog.com/open-source/#os-arti">Artifactory Enterprise</a>
-            and other ones. That way VersionEye gets a complete list of <b>ALL</b> your dependencies!
+            and other ones. That way VersionEye gets a complete list of
+            <b>ALL</b> your dependencies!
             The open source dependencies AND your private components as well!
-            Currently we support:
+            Currently these binary repositories are supported:
           </p>
           <ul style="font-weight: normal; font-size: 1.3em;">
             <li><a href="http://www.sonatype.com/nexus">Nexus Pro</a> (Java)</li>
@@ -97,8 +99,10 @@
             application will come up, where you can activate the instance with an valid API key.
           </p>
           <p class="lead">
-            After activation you can login with admin/admin and connect VersionEye
-            instance with your private SMTP, LDAP, binary Repository and Git servers.
+            After activation you can login with admin/admin and connect your VersionEye
+            instance with your private SMTP / MS Exchange, LDAP / Active Directory, binary Repository and Git servers.
+            And if you run your VersionEye instance in your DMZ behind your Enterprise firewall,
+            you can configure a Proxy server which will be used for connections to the internet.
           </p>
           <p class="lead" style="text-align: center;">
             <%= image_tag "marketing/01-veye-global-settings.png", :class => "img-border img-rounded", :style => "width: 100%;" %>
