--- a/app/views/landing_page/index.html.erb
+++ b/app/views/landing_page/index.html.erb
@@ -127,22 +127,57 @@
 
 
     <div class="content-section-a">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-12" style="text-align: center;">
-
-                    <%= form_tag(signup_path, :method => "GET", :style=>"margin: 0; padding: 0 0 0 10px;") do  %>
-                      <div class="form-group">
-                        <button type="submit" class="btn btn-lg btn-success" >Sign up for free</button>
-                      </div>
-                    <% end %>
-
-                </div>
-            </div>
-
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12" style="text-align: center;">
+            <%= form_tag(signup_path, :method => "GET", :style=>"margin: 0; padding: 0 0 0 10px;") do  %>
+              <div class="form-group">
+                <button type="submit" class="btn btn-lg btn-success" >Sign up for free</button>
+              </div>
+            <% end %>
+          </div>
         </div>
-        <!-- /.container -->
+      </div>
+      <!-- /.container -->
+    </div>
 
+    <div class="content-section-b">
+      <div class="container">
+        <h2 class="section-heading">Database</h2>
+        <p class="lead">
+          The VersionEye crawlers are collecting 24/7 meta information about open source projects
+          which are available through some kind of package manager. Meta information like security
+          vulnerabilities, licenses, versions, descriptions, links and so on.
+          Currently the VersionEye database contains meta information to more than 1.2 Million open source projects.
+          Each of this OS projects has a page at VersionEye where the collected meta information can be viewed.
+          Here are the most followed projects:
+        </p>
+        <h3 class="section-heading">Most followed libraries</h2>
+        <% @most_followed.each_with_index do |prod, i| %>
+          <div class="prod-item">
+            <div>
+              <p class="lead">
+                <a href = "<%= products_path(lang: prod.language_esc, key: prod.to_param) %>"><%= prod.name %></a><br/>
+                <%= prod.short_summary %><br/>
+                <span class="small"> Followers: <%= prod.followers %> | License: <%= prod.license_info %> </span>
+              </span>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
+
+    <div class="content-section-a">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12" style="text-align: center;">
+            <%= form_tag(signup_path, :method => "GET", :style=>"margin: 0; padding: 0 0 0 10px;") do  %>
+              <div class="form-group">
+                <button type="submit" class="btn btn-lg btn-success" >Sign up for free</button>
+              </div>
+            <% end %>
+          </div>
+        </div>
+      </div>
+      <!-- /.container -->
     </div>
