--- a/app/views/enterprise/show.html.erb
+++ b/app/views/enterprise/show.html.erb
@@ -29,19 +29,17 @@
           <p class="lead">
             The whole point of running VersionEye as on-premise installation
             is that it can crawl internal binary repositories,
-            such as <a href="http://www.sonatype.com/nexus">Nexus Pro</a>,
-            <a href="http://www.jfrog.com/open-source/#os-arti">Artifactory Enterprise</a>
-            and other ones. That way VersionEye gets a complete list of
-            <b>ALL</b> your dependencies!
+            such as Nexus Pro, Artifactory Enterprise and other ones.
+            That way VersionEye gets a complete list of <b>ALL</b> your dependencies!
             The open source dependencies AND your private components as well!
             Currently these binary repositories are supported:
           </p>
           <ul style="font-weight: normal; font-size: 1.3em;">
-            <li><a href="http://www.sonatype.com/nexus">Nexus Pro</a> (Java)</li>
-            <li><a href="http://www.jfrog.com/open-source/#os-arti">Artifactory Enterprise</a> (Java)</li>
-            <li><a href="https://archiva.apache.org">Apache Archiva</a> (Java)</li>
-            <li><a href="http://cocoapods.org/">CocoaPods</a> (Objective-C)</li>
-            <li><a href="https://github.com/composer/satis">Satis</a> (PHP)</li>
+            <li><a href="http://www.sonatype.com/nexus">Nexus Pro</a></li>
+            <li><a href="http://www.jfrog.com/open-source/#os-arti">Artifactory Enterprise</a></li>
+            <li><a href="https://archiva.apache.org">Apache Archiva</a></li>
+            <li><a href="http://cocoapods.org/">CocoaPods</a></li>
+            <li><a href="https://github.com/composer/satis">Satis</a></li>
           </ul>
         </div>
       </div>
@@ -86,7 +84,7 @@
 
     <div class="content-section-a">
       <div class="container">
-        <h2 >How do I install VersionEye Enterprise?</h2>
+        <h2 >How do I install VersionEye?</h2>
         <div class="well-white" >
           <p class="lead">
             VersionEye is completely open source! The source code repsoitories are on <a href="https://github.com/versioneye">GitHub</a> and every time we do a deployment to VersionEye.com,
