Add note for Mannheim

--- a/app/views/layouts/_footer_content.html.erb
+++ b/app/views/layouts/_footer_content.html.erb
@@ -52,4 +52,8 @@
     <a href="/chef" >Chef</a>
   </div>
 
+  <div class="footer_language_row" style="color: gray;">
+    Made with <i class="fa fa-heart" style="color: black;" aria-hidden="true"></i> in <a href="https://www.mannheim.de/" target="MA">Mannheim</a>
+  </div>
+
 </footer>
