--- a/app/views/layouts/_footer_content.html.erb
+++ b/app/views/layouts/_footer_content.html.erb
@@ -22,6 +22,8 @@
   <div class="footer_social_media_row" >
     <a href="https://github.com/VersionEye" class="footer_link_margin" target="new_GitHub" title="GitHub" ><i class="fa fa-github footer_social_icon" ></i></a>
 
+    <a href="https://hub.docker.com/u/versioneye/" class="footer_link_margin" style="font-size: 24px;" target="new_dh" title="Docker Hub" >DH</a>
+
     <a href="https://twitter.com/VersionEye" class="footer_link_margin" target="new_Twitter" title="Twitter" ><i class="fa fa-twitter footer_social_icon" ></i></a>
 
     <a href="https://www.facebook.com/VersionEye" class="footer_link_margin" target="new_FB" title="Facebook" ><i class="fa fa-facebook footer_social_icon" ></i></a>
@@ -52,7 +54,7 @@
     <a href="/chef" >Chef</a>
   </div>
 
-  <div class="footer_language_row" style="color: gray;">
+  <div class="footer_language_row" style="color: gray; padding-bottom: 15px;">
     Made with <i class="fa fa-heart" style="color: black;" aria-hidden="true"></i> in <a href="https://www.mannheim.de/" target="MA">Mannheim</a>
   </div>
 
