--- a/app/views/products/_product_show_description.html.erb
+++ b/app/views/products/_product_show_description.html.erb
@@ -5,18 +5,6 @@
     Description <a class="octicon-link" href="#description"><i class="fa fa-link"></i></a>
   </h2>
 
-  <% if !Settings.instance.environment.to_s.eql?('enterprise') && request.original_url.to_s.match("@").nil? %>
-    <div class="ad_prod_desc">
-      <div id='div-gpt-ad-1407836245189-0'>
-        <script type='text/javascript'>
-          googletag.cmd.push(function() {
-            googletag.pubads().display('/53015287/versioneye.com_d_728x90_1', [728, 90], 'div-gpt-ad-1407836245189-0');
-          });
-        </script>
-      </div>
-    </div>
-  <% end %>
-
   <div style="margin-bottom: 20px;" >
     <p>
       <% if @product.description && @product.description.include?("\n") %>
@@ -38,5 +26,17 @@
     <% end %>
 
   </div>
+
+  <% if !Settings.instance.environment.to_s.eql?('enterprise') && request.original_url.to_s.match("@").nil? %>
+    <div class="ad_prod_desc" style="padding-top: 15px;">
+      <div id='div-gpt-ad-1407836245189-0'>
+        <script type='text/javascript'>
+          googletag.cmd.push(function() {
+            googletag.pubads().display('/53015287/versioneye.com_d_728x90_1', [728, 90], 'div-gpt-ad-1407836245189-0');
+          });
+        </script>
+      </div>
+    </div>
+  <% end %>
 
 <% end %>
