--- a/app/views/user/projects/helpers/_project.html.erb
+++ b/app/views/user/projects/helpers/_project.html.erb
@@ -18,6 +18,9 @@
       : <%= project.version %>
     <% end %>
     <% if project.public == false %>
+      <span class="fa fa-eye-slash" title="Only visible for collaborators"></span>
+    <% end %>
+    <% if project.private_project == true %>
       <span class="fa fa-lock" title="Private VersionEye Project"></span>
     <% end %>
     <% if project.sv_count_sum > 0 %>
