--- a/app/views/user/projects/show.html.erb
+++ b/app/views/user/projects/show.html.erb
@@ -35,6 +35,9 @@
           (<%= @project.ids %>)
         </span>
         <% if @project.public == false %>
+          <span class="fa fa-eye-slash" title="Only visible for collaborators"></span>
+        <% end %>
+        <% if @project.private_project == true %>
           <span class="fa fa-lock" title="Private VersionEye Project"></span>
         <% end %>
         <% if project_member?(@project, current_user) %>
