Remove references to non existing images.

--- a/app/views/shared/_enterprise_agreements.html.erb
+++ b/app/views/shared/_enterprise_agreements.html.erb
@@ -1,7 +1,7 @@
 
 <h1> VersionEye Enterprise License Agreements </h1>
 
-<div style="position:relative;width:892px;height:1262px; margin-top:-30px; background:url('VersionEye-English-German-License-Agreement-1.5_web001.png') no-repeat;">
+<div style="position:relative;width:892px;height:1262px; margin-top:-30px;">
 <div style="position:absolute;top:123px;left:43px"><nobr><span style="vertical-align:top;font-size:9px;font-family:Arial;color:#000000;font-weight:bold;letter-spacing:1.49213px;">A) GENERAL</span></nobr></div>
 <div style="position:absolute;top:123px;left:453px"><nobr><span style="vertical-align:top;font-size:9px;font-family:Arial;color:#000000;font-weight:bold;letter-spacing:0.00000px;">A)</span></nobr></div>
 <div style="position:absolute;top:123px;left:507px"><nobr><span style="vertical-align:top;font-size:9px;font-family:Arial;color:#000000;font-weight:bold;letter-spacing:1.92482px;">ALLGEMEINES</span></nobr></div>
@@ -146,7 +146,7 @@
 </div>
 <hr>
 <a name="2">
-</a><div style="position:relative;width:892px;height:1262px;background:url('VersionEye-English-German-License-Agreement-1.5_web002.png') no-repeat;">
+</a><div style="position:relative;width:892px;height:1262px;">
 <div style="position:absolute;top:44px;left:86px"><nobr><span style="vertical-align:top;font-size:9px;font-family:Arial;color:#000000;letter-spacing:1.11081px;">specified in the Order in accordance with these terms and condi-</span></nobr></div>
 <div style="position:absolute;top:44px;left:501px"><nobr><span style="vertical-align:top;font-size:9px;font-family:Arial;color:#000000;letter-spacing:1.16934px;">schließliches Recht, die in der Bestellung näher bezeichnete</span></nobr></div>
 <div style="position:absolute;top:57px;left:86px"><nobr><span style="vertical-align:top;font-size:9px;font-family:Arial;color:#000000;letter-spacing:1.07703px;">tions and in compliance with any usage restrictions set forth by the</span></nobr></div>
@@ -317,7 +317,7 @@
 </div>
 <hr>
 <a name="3">
-</a><div style="position:relative;width:892px;height:1262px;background:url('VersionEye-English-German-License-Agreement-1.5_web003.png') no-repeat;">
+</a><div style="position:relative;width:892px;height:1262px;">
 <div style="position:absolute;top:44px;left:86px"><nobr><span style="vertical-align:top;font-size:9px;font-family:Arial;color:#000000;letter-spacing:1.04535px;">solely for Licensee’s own internal purposes. Any further use, such</span></nobr></div>
 <div style="position:absolute;top:44px;left:501px"><nobr><span style="vertical-align:top;font-size:9px;font-family:Arial;color:#000000;letter-spacing:1.15020px;">zenznehmer die Software ausschließlich zum Gebrauch für eige-</span></nobr></div>
 <div style="position:absolute;top:57px;left:86px"><nobr><span style="vertical-align:top;font-size:9px;font-family:Arial;color:#000000;letter-spacing:1.03039px;">as the provision of the Software or parts thereof to third parties, for</span></nobr></div>
@@ -462,7 +462,7 @@
 </div>
 <hr>
 <a name="4">
-</a><div style="position:relative;width:892px;height:1262px;background:url('VersionEye-English-German-License-Agreement-1.5_web004.png') no-repeat;">
+</a><div style="position:relative;width:892px;height:1262px;">
 <div style="position:absolute;top:48px;left:75px"><nobr><span style="vertical-align:top;font-size:9px;font-family:Arial;color:#000000;letter-spacing:1.05641px;">Software maintenance is part of the provision of the Software.</span></nobr></div>
 <div style="position:absolute;top:48px;left:490px"><nobr><span style="vertical-align:top;font-size:9px;font-family:Arial;color:#000000;letter-spacing:1.09510px;">Die Softwarepflege ist im Lieferumfang der Softwareüberlassung für</span></nobr></div>
 <div style="position:absolute;top:62px;left:490px"><nobr><span style="vertical-align:top;font-size:9px;font-family:Arial;color:#000000;letter-spacing:1.18642px;">die Nutzungsperiode enthalten.</span></nobr></div>
@@ -623,7 +623,7 @@
 </div>
 <hr>
 <a name="5">
-</a><div style="position:relative;width:892px;height:1262px;background:url('VersionEye-English-German-License-Agreement-1.5_web005.png') no-repeat;">
+</a><div style="position:relative;width:892px;height:1262px;">
 <div style="position:absolute;top:43px;left:86px"><nobr><span style="vertical-align:top;font-size:9px;font-family:Arial;color:#000000;letter-spacing:1.08486px;">be provided in time and without charge to VersionEye.</span></nobr></div>
 <div style="position:absolute;top:44px;left:501px"><nobr><span style="vertical-align:top;font-size:9px;font-family:Arial;color:#000000;letter-spacing:1.20925px;">handlungen des Lizenznehmers oder seiner Erfüllungsgehilfen</span></nobr></div>
 <div style="position:absolute;top:57px;left:501px"><nobr><span style="vertical-align:top;font-size:9px;font-family:Arial;color:#000000;letter-spacing:1.05893px;">rechtzeitig und für</span></nobr></div>
@@ -776,7 +776,7 @@
 </div>
 <hr>
 <a name="6">
-</a><div style="position:relative;width:892px;height:1262px;background:url('VersionEye-English-German-License-Agreement-1.5_web006.png') no-repeat;">
+</a><div style="position:relative;width:892px;height:1262px;">
 <div style="position:absolute;top:43px;left:76px"><nobr><span style="vertical-align:top;font-size:9px;font-family:Arial;color:#000000;letter-spacing:0.98947px;">right of retention in relationship to such claims only.</span></nobr></div>
 <div style="position:absolute;top:43px;left:485px"><nobr><span style="vertical-align:top;font-size:9px;font-family:Arial;color:#000000;letter-spacing:1.14518px;">rungen ein Zurückbehaltungsrecht ausüben.</span></nobr></div>
 <div style="position:absolute;top:80px;left:43px"><nobr><span style="vertical-align:top;font-size:9px;font-family:Arial;color:#000000;font-weight:bold;letter-spacing:0.00000px;">17</span></nobr></div>
@@ -933,7 +933,7 @@
 </div>
 <hr>
 <a name="7">
-</a><div style="position:relative;width:892px;height:1262px;background:url('VersionEye-English-German-License-Agreement-1.5_web007.png') no-repeat;">
+</a><div style="position:relative;width:892px;height:1262px;">
 <div style="position:absolute;top:44px;left:501px"><nobr><span style="vertical-align:top;font-size:9px;font-family:Arial;color:#000000;letter-spacing:1.11368px;">geltend machen können, die dem vereinbarten Einsatz entgegen-</span></nobr></div>
 <div style="position:absolute;top:57px;left:501px"><nobr><span style="vertical-align:top;font-size:9px;font-family:Arial;color:#000000;letter-spacing:1.57367px;">stehen.</span></nobr></div>
 <div style="position:absolute;top:80px;left:43px"><nobr><span style="vertical-align:top;font-size:9px;font-family:Arial;color:#000000;font-weight:bold;letter-spacing:2.32896px;">19.2</span></nobr></div>
@@ -1092,7 +1092,7 @@
 </div>
 <hr>
 <a name="8">
-</a><div style="position:relative;width:892px;height:1262px;background:url('VersionEye-English-German-License-Agreement-1.5_web008.png') no-repeat;">
+</a><div style="position:relative;width:892px;height:1262px;">
 <div style="position:absolute;top:48px;left:75px"><nobr><span style="vertical-align:top;font-size:9px;font-family:Arial;color:#000000;font-weight:bold;letter-spacing:0.95142px;">21.1.2</span></nobr></div>
 <div style="position:absolute;top:48px;left:129px"><nobr><span style="vertical-align:top;font-size:9px;font-family:Arial;color:#000000;letter-spacing:1.11724px;">With restriction to the typical, at the time the Order was</span></nobr></div>
 <div style="position:absolute;top:48px;left:458px"><nobr><span style="vertical-align:top;font-size:9px;font-family:Arial;color:#000000;font-weight:bold;letter-spacing:1.66459px;">21.1.2</span></nobr></div>
@@ -1261,7 +1261,7 @@
 </div>
 <hr>
 <a name="9">
-</a><div style="position:relative;width:892px;height:1162px;background:url('VersionEye-English-German-License-Agreement-1.5_web009.png') no-repeat;">
+</a><div style="position:relative;width:892px;height:1162px;">
 <div style="position:absolute;top:44px;left:129px"><nobr><span style="vertical-align:top;font-size:9px;font-family:Arial;color:#000000;letter-spacing:1.07872px;">Maintenance services directly nor indirectly in a country,</span></nobr></div>
 <div style="position:absolute;top:44px;left:522px"><nobr><span style="vertical-align:top;font-size:9px;font-family:Arial;color:#000000;letter-spacing:1.22063px;">warepflegeleistungen weder direkt noch indirekt in einem</span></nobr></div>
 <div style="position:absolute;top:57px;left:129px"><nobr><span style="vertical-align:top;font-size:9px;font-family:Arial;color:#000000;letter-spacing:1.20260px;">for which the export control regulations of the United</span></nobr></div>
