Fix and unify navbar ids
Fixes #655

--- a/app/views/user/helpers/_navi.html.erb
+++ b/app/views/user/helpers/_navi.html.erb
@@ -1,13 +1,13 @@
 <div class="navbar navbar-default" >
   <div class="navbar-header">
-    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#settings_menu" aria-expanded="false">
+    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#settings-menu" aria-expanded="false">
       <span class="sr-only">Toggle navigation</span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
   </div>
-  <div class="collapse navbar-collapse" id="settings_menu">
+  <div class="collapse navbar-collapse" id="settings-menu">
     <div class="navi nav-stacked" >
       <% if signed_in? %>
         <ul class = "nav nav-pills nav-stacked">
