--- a/app/views/organisations/_navi.html.erb
+++ b/app/views/organisations/_navi.html.erb
@@ -2,7 +2,7 @@
 
 <div class="navbar navbar-default" >
   <div class="navbar-header">
-    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#settings_menu" aria-expanded="false">
+    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#orga-menu" aria-expanded="false">
       <span class="sr-only">Toggle navigation</span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
@@ -10,7 +10,7 @@
     </button>
   </div>
 
-  <div class="collapse navbar-collapse" id="orga_menu">
+  <div class="collapse navbar-collapse" id="orga-menu">
     <div class="navi nav-stacked" >
       <% if signed_in? %>
         <ul class = "nav nav-pills nav-stacked">
